--- a/Lab_4 Assignment/source/app/src/main/res/layout/activity_login.xml
+++ b/Lab_4 Assignment/source/app/src/main/res/layout/activity_login.xml
@@ -13,39 +13,28 @@
         android:paddingRight="24dp"
         android:weightSum="1">
 
-        <!--<ImageView android:src="@drawable/logo"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="72dp"-->
-            <!--android:layout_marginBottom="24dp"-->
-            <!--android:layout_gravity="center_horizontal" />-->
-
-        <!--  Email Label -->
-        <TextView
-            android:text="ASE LAB-4 ASSIGNMENT"
-            android:layout_width="197dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView" />
 
         <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
+            android:layout_width="178dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            android:weightSum="1">
             <EditText android:id="@+id/input_email"
-                android:layout_width="match_parent"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
-                android:hint="Email" />
+                android:hint="Email"
+                android:layout_weight="0.10" />
         </android.support.design.widget.TextInputLayout>
 
-        <!--  Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_password"
-                android:layout_width="match_parent"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="Password"/>
@@ -53,7 +42,7 @@
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_login"
-            android:layout_width="fill_parent"
+            android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
@@ -61,10 +50,10 @@
             android:text="Login"/>
 
         <TextView android:id="@+id/link_signup"
-            android:layout_width="fill_parent"
+            android:layout_width="221dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
+            android:text="Sign up here"
             android:gravity="center"
             android:textSize="16dip"/>
 
