--- a/Lab_4 Assignment/source/app/src/main/res/layout/activity_main.xml
+++ b/Lab_4 Assignment/source/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,7 +7,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    app:backgroundTint="#000000"
+    android:background="#000000">
 
     <EditText
         android:layout_width="wrap_content"
@@ -15,9 +18,12 @@
         android:ems="10"
         android:layout_marginTop="41dp"
         android:id="@+id/editText"
-        android:text="Search for knowledge service"
+
+        android:hint="Search for it..."
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        app:backgroundTint="#ffffff"
+        android:background="#ffffff" />
 
     <Button
         android:text="GET DETAILS"
