--- a/Lab_4 Assignment/source/app/src/main/res/layout/activity_signup.xml
+++ b/Lab_4 Assignment/source/app/src/main/res/layout/activity_signup.xml
@@ -26,7 +26,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_name"
-                android:layout_width="match_parent"
+                android:layout_width="228dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
                 android:hint="Name" />
@@ -37,13 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPostalAddress"
-                android:hint="Address" />
-        </android.support.design.widget.TextInputLayout>
+            android:layout_marginBottom="8dp"></android.support.design.widget.TextInputLayout>
 
 
 
@@ -54,7 +48,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_email"
-                android:layout_width="match_parent"
+                android:layout_width="232dp"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:hint="Email" />
@@ -66,13 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_mobile"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="Mobile Number" />
-        </android.support.design.widget.TextInputLayout>
+            android:layout_marginBottom="8dp"></android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
@@ -81,7 +69,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_password"
-                android:layout_width="match_parent"
+                android:layout_width="237dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="Password"/>
@@ -94,7 +82,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp">
             <EditText android:id="@+id/input_reEnterPassword"
-                android:layout_width="match_parent"
+                android:layout_width="238dp"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:hint="Re-enter Password"/>
@@ -103,7 +91,7 @@
         <!-- Signup Button -->
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_signup"
-            android:layout_width="fill_parent"
+            android:layout_width="242dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
@@ -111,10 +99,10 @@
             android:text="Create Account"/>
 
         <TextView android:id="@+id/link_login"
-            android:layout_width="fill_parent"
+            android:layout_width="249dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
-            android:text="Already a member? Login"
+            android:text="Login here"
             android:gravity="center"
             android:textSize="16dip"/>
 
