--- a/Lab_5 Assignment/source/www/templates/signup.html
+++ b/Lab_5 Assignment/source/www/templates/signup.html
@@ -2,21 +2,21 @@
     <ion-content padding="true" class="has-header">
         <form id="signup-form4" class="list">
             <ion-list id="signup-list3">
-                <label class="item item-input" id="signup-input7">
+                <label class="item item-input" id="email">
                     <span class="input-label">Email id</span>
                     <input type="text" placeholder="email_id">
                 </label>
-                <label class="item item-input" id="signup-input8">
+                <label class="item item-input" id="uname">
                     <span class="input-label">Username</span>
                     <input type="text" placeholder="username">
                 </label>
-                <label class="item item-input" id="signup-input9">
+                <label class="item item-input" id="password">
                     <span class="input-label">Password</span>
                     <input type="password" placeholder="password">
                 </label>
-                <label class="item item-input" id="signup-input10">
+                <label class="item item-input" id="phone_no">
                     <span class="input-label">phone number</span>
-                    <input type="tel" placeholder="password">
+                    <input type="text" placeholder="hone_no">
                 </label>
             </ion-list>
             <a ui-sref="user_created_success" id="signup-button4" style="color:#1A1A20;" class="button button-stable  button-block">Sign up</a>
