--- a/Lab_5 Assignment/source/www/templates/signup.html
+++ b/Lab_5 Assignment/source/www/templates/signup.html
@@ -1,25 +1,26 @@
 <ion-view title="Signup" id="page5" style="background-color:#276594;">
-    <ion-content padding="true" class="has-header">
+    <ion-content padding="true" style="background: url(img/je1spDjLQAS5XEe8p4IJ_Simple-blue-high-resolution-wallpaper.jpg) no-repeat center;background-size:cover;" class="has-header">
         <form id="signup-form4" class="list">
             <ion-list id="signup-list3">
-                <label class="item item-input" id="email">
-                    <span class="input-label">Email id</span>
+                <label class="item item-input" id="signup-input7">
                     <input type="text" placeholder="email_id">
                 </label>
-                <label class="item item-input" id="uname">
-                    <span class="input-label">Username</span>
-                    <input type="text" placeholder="username">
-                </label>
-                <label class="item item-input" id="password">
-                    <span class="input-label">Password</span>
-                    <input type="password" placeholder="password">
-                </label>
-                <label class="item item-input" id="phone_no">
-                    <span class="input-label">phone number</span>
-                    <input type="text" placeholder="hone_no">
-                </label>
             </ion-list>
-            <a ui-sref="user_created_success" id="signup-button4" style="color:#1A1A20;" class="button button-stable  button-block">Sign up</a>
+            <div class="spacer" style="width: 300px; height: 11px;"></div>
+            <label class="item item-input" id="signup-input15">
+                <input type="text" placeholder="username">
+            </label>
         </form>
+        <form id="signup-form21" class="list">
+            <label class="item item-input" id="signup-input21">
+                <input type="text" placeholder="password">
+            </label>
+        </form>
+        <form id="signup-form24" class="list">
+            <label class="item item-input" id="signup-input23">
+                <input type="text" placeholder="phone_no">
+            </label>
+        </form>
+        <a ui-sref="user_created_success" id="signup-button4" style="color:#1A1A20;" class="button button-stable  button-block">Sign up</a>
     </ion-content>
 </ion-view>
