--- a/Lab_5 Assignment/source/www/templates/user_created_success.html
+++ b/Lab_5 Assignment/source/www/templates/user_created_success.html
@@ -1,5 +1,5 @@
 <ion-view title="User_created_success" id="page6" style="background-color:#276594;">
-    <ion-content padding="true" class="has-header">
+    <ion-content padding="true" style="background: url(img/mfnphE5fSTSPx1mO1qpD_Simple-blue-high-resolution-wallpaper.jpg) no-repeat center;background-size:cover;" class="has-header">
         <h1 id="user_created_success-heading3" style="color:#000000;">User created successfully</h1>
     </ion-content>
 </ion-view>
