--- a/Lab_5 Assignment/source/www/templates/home.html
+++ b/Lab_5 Assignment/source/www/templates/home.html
@@ -1,5 +1,6 @@
-<ion-view title="Home" id="page4" style="background-color:#276594;">
-    <ion-content padding="true" class="has-header">
-        <h2 id="home-heading2" style="color:#000000;font-style:italic;">Welcome User</h2>
+<ion-view title="Home" id="page8">
+    <ion-content padding="true" style="background: url(img/BvF520ofSsyEOtimRwbe_Simple-blue-high-resolution-wallpaper.jpg) no-repeat center;background-size:cover;" class="has-header">
+        <button id="home-button6" class="button button-positive  button-block">General API</button>
+        <button id="home-button7" class="button button-positive  button-block">Knowledge_Service</button>
     </ion-content>
 </ion-view>
