--- a/Lab_5 Assignment/source/www/templates/login.html
+++ b/Lab_5 Assignment/source/www/templates/login.html
@@ -1,18 +1,17 @@
 <ion-view title="Login" id="page2" style="background-color:#276594;">
-    <ion-content padding="true" class="has-header">
+    <ion-content padding="true" style="background: url(img/G9Qa5TcCSkCms78vGC7J_Simple-blue-high-resolution-wallpaper.jpg) no-repeat center;background-size:cover;" class="has-header">
         <form id="login-form1" class="list">
             <ion-list id="login-list1">
                 <label class="item item-input" id="login-input1">
-                    <span class="input-label">Username</span>
                     <input type="text" placeholder="username">
                 </label>
-                <label class="item item-input" id="login-input2">
-                    <span class="input-label">Password</span>
-                    <input type="password" placeholder="password">
-                </label>
             </ion-list>
-            <a ui-sref="home" id="login-button1" class="button button-stable  button-block">Log in</a>
-            <a ui-sref="signup" id="login-button2" class="button button-positive  button-block button-clear">Or create an account</a>
+            <div class="spacer" style="width: 300px; height: 12px;"></div>
+            <label class="item item-input" id="login-input2">
+                <input type="password" placeholder="password">
+            </label>
+            <a ui-sref="general_API" id="login-button1" class="button button-stable  button-block">Log in</a>
+            <a ui-sref="signup" id="login-button2" class="button button-dark  button-block button-clear">Or create an account</a>
         </form>
     </ion-content>
 </ion-view>
