--- a/Lab_5 Assignment/source/www/templates/login.html
+++ b/Lab_5 Assignment/source/www/templates/login.html
@@ -2,12 +2,12 @@
     <ion-content padding="true" style="background: url(img/G9Qa5TcCSkCms78vGC7J_Simple-blue-high-resolution-wallpaper.jpg) no-repeat center;background-size:cover;" class="has-header">
         <form id="login-form1" class="list">
             <ion-list id="login-list1">
-                <label class="item item-input" id="login-input1">
+                <label class="item item-input" id="login_user_name">
                     <input type="text" placeholder="username">
                 </label>
             </ion-list>
             <div class="spacer" style="width: 300px; height: 12px;"></div>
-            <label class="item item-input" id="login-input2">
+            <label class="item item-input" id="login_password">
                 <input type="password" placeholder="password">
             </label>
             <a ui-sref="general_API" id="login-button1" class="button button-stable  button-block">Log in</a>
