--- a/Lab_6 Assignment/source/app/src/main/res/layout/activity_main.xml
+++ b/Lab_6 Assignment/source/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    app:backgroundTint="#000000"
-    android:background="#000000">
+    android:fitsSystemWindows="true"
+    tools:context="com.sourcey.harsha.activity_maps">
 
-    <EditText
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_marginTop="41dp"
-        android:id="@+id/editText"
+        >
 
-        android:hint="Search for it..."
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        app:backgroundTint="#ffffff"
-        android:background="#ffffff" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"></android.support.v7.widget.Toolbar>
 
-    <Button
-        android:text="GET DETAILS"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:id="@+id/button" />
-</RelativeLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/activity_signup" />
+
+</android.support.design.widget.CoordinatorLayout>
