--- a/Lab_6 Assignment/source/app/src/main/res/values/colors.xml
+++ b/Lab_6 Assignment/source/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <color name="primary">#000000</color>
-  <color name="primary_dark">#FFFFFF</color>
-  <color name="primary_darker">#000000</color>
+  <color name="primary_dark">#8DB600</color>
+  <color name="primary_darker">#00FFFF</color>
   <color name="accent">#FFFFFF</color>
 
   <color name="black">#000000</color>
